# speed-sleuth

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  404.html  CHANGELOG.md  LICENSE.md  Makefile  README.md  SpeedofDotMe.py  SpeedtestDotNet.py  SpeedtestProvider.py  deps.py  index.html  main.py  mkdocs.yml  objects.inv  pylintrc  pyproject.toml  release-please-config.json  requirements.txt  setup.cfg  speedtest.py
.github/workflows/: docs.yml  lint.yml  release-please.yml  test.yml
browser/browser/: index.html
browser/chromium/: index.html
browser/ms_edge/: index.html
docs/: style.css
docs/browser/: browser.md  chromium.md  ms_edge.md
docs/lib/browser/: browser.md  chromium.md
docs/lib/provider/: provider.md  speedofme.md  speedtest.md
docs/provider/: provider.md  speedofme.md  speedtest.md
lib/browser/: __init__.py  chromium.py
lib/provider/: __init__.py  speedofme.py  speedtest.py
lib/speedtestprovider/: __init__.py  speedofme.py  speedtest.py
provider/provider/: index.html
provider/speedofme/: index.html
provider/speedtest/: index.html
search/: search_index.json
src/provider/: __init__.py  speedofme.py  speedtest.py
src/speed_sleuth/browser/: __init__.py  chromium.py  ms_edge.py
src/speed_sleuth/cli/: __init__.py  __main__.py
src/speed_sleuth/driver/: __init__.py  selenium.py
src/speed_sleuth/provider/: __init__.py  fast.py  speedofme.py  speedtest.py
test/01-general/: test_selenium_setup.py
tests/: __init__.py
tests/integration/provider/: test_speedtest.py
tests/mocks/: browser.py  driver.py
tests/provider/: test_speedtest.py
tests/unit/: test_browser.py  test_chromium.py  test_msedge.py  test_selenium_driver.py
tests/unit/provider/: test_fast.py
