[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speed_sleuth"
dynamic = ["version"]
description = "Automated speedtest analyser using selenium"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Lionel Hubaut", email = "me@nullbyte.be"}
]
maintainers = [
    {name = "Lionel Hubaut", email = "me@nullbyte.be"}
]
dependencies = [
    "click>=8.1.7",
    "selenium==4.19.0",
]
license = { file = "LICENSE.md" }
keywords = ["selenium", "selenium-webdriver", "webdriver", "headless", "speedtest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring"
]

[project.urls]
Repository = "https://github.com/lion24/speed-sleuth.git"

[project.scripts]
speed-sleuth = "speed_sleuth.cli:main"

[tool.hatch.version]
path = "src/speed_sleuth/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/speed_sleuth/", "tests"]

[tool.hatch.build.targets.sdist]
include = [
    "/tests",
]
exclude = [
    "*.png",
]

[tool.hatch.envs.default]
python = "3.10"

[tool.hatch.envs.style]
detached = true
python = "3.10"
dependencies = [
    "flake8",
    "black",
    "isort",
    "codespell",
]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

[tool.codespell]
skip = './site'
count = ''
quiet-level = 3

[tool.hatch.envs.style.scripts]
check = [
    "flake8 .",
    "black -l 79 --check --diff .",
    "isort --check-only --diff .",
    "codespell",
]
fmt = [
    "isort .",
    "black -l 79 .",
    "codespell -w",
    "check",
]

[tool.hatch.envs.test]
type = "virtual"
dependencies = [
    "coverage[toml]",
    "pytest",
    "pytest-cov",
]

[tool.hatch.envs.test.scripts]
run = "pytest -rA {args:tests}"
dry-run = "run --collect-only"
run-coverage = "coverage run -m pytest -rA {args:tests}"
cov-report = [
  "coverage combine",
  "coverage report",
]
cov = [
  "run-coverage",
  "cov-report",
]

[tool.coverage.run]
source_pkgs = ["speed_sleuth", "tests"]
branch = true
parallel = true
omit = [
  "src/speed_sleuth/cli/*",
]

[tool.coverage.paths]
speed_sleuth = ["src/speed_sleuth", "*/speed-sleuth/src/speed_sleuth"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.docs]
dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]>=0.18",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000 -w ."
deploy = "mkdocs gh-deploy --force"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
